--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Test Pattamon Poonsiri - UX/UI Designer</title>
+    <title>Pattamon Poonsiri - UX/UI Designer</title>
     <link rel="shortcut icon" href="img/favicon_io/favicon-32x32.png">
   </head>
   <body>
