Change the title of About page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About Me: Pattamon Poonsiri</title>
+  <title>About Pattamon Poonsiri</title>
   <link rel="shortcut icon" href="img/favicon_io/favicon-32x32.png">
 </head>
 
