link to SPAR project page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <p>UX/UI • light&Dark mode • Figma</p>
               <p>A money saving app that is designed for people
                 with little knowledge of finance.</p>
-              <a href="#">View project</a>
+              <a href="spar.html">View project</a>
             </div>
           </div>
         <!-- Project 2  -->
