Add Spar's Intro Section

--- a/spar.html
+++ b/spar.html
@@ -25,45 +25,40 @@
   </header>
 
   <main>
-    <!-- About me  -->
+    <!-- Intro  -->
     <div class="section">
       <div class="container">
-        <h1>About me</h1>
-        <div class="row">
-          <div class="column">
+        <h1>Project:Spar</h1>
             <picture>
-              <source srcset="img/profile@1.jpg" media="(max-width:767px)">
-              <img src="img/profile@2.jpg" alt="Profile Photo">
+              <source srcset="img/spar/spar@1.jpg" media="(max-width:767px)">
+              <img src="img/spar/spar@2.jpg" alt="Spar Preview Image">
             </picture>
-          </div>
-          <div class="column">
-            <p>Hi, my name is Pattamon Poonsiri. I’m always passionate about arts and design,
-              but I only recently fell in love with UX/UI.</p>
-            <p>I strongly believe that good storytelling and design are keys to successful products.
-              I approach this by tacking problems creatively and with empathy. I also strive to work with people
-              from different cultures and backgrounds as I believe diverse team produces the best results.</p>
-            <p>Outside the work, I find my inspiration through cooking, visiting museums,
-              and traveling around the world. I can speak fluent Thai and English,
-              and still trying to improve my German.</p>
-            <p>If you think that I would be a great fit to your team, feel free to
-              contact me via <a href="mailto:pattamon.poonsiri@gmail.com">Email</a> or <a href="https://www.linkedin.com/in/pattamon-poonsiri/" target="_blank">LinkedIn</a>.</p>
-            <a href="files/resume.pdf" target="_blank">Checkout my resume</a>
-          </div>
+            <p>Spar is a money saving app that is designed for people with little
+              knowledge of finance but who want to save up money in an easy and
+              time saving manner. </p>
+            <p>The app will function like their personal financial advisor who
+              keeping tracks of their expenses and provide a budget planner accordingly.
+              Users will be able to plan their finance in advance whether to buy a gift,
+              go on a trip or buy a house. By simply selecting a saving plan, they can
+              control their spending and save more.</p>
+      </div>
+    </div>
+    <!-- Roles&Timeframe  -->
+    <div class="section">
+      <div class="row">
+        <div class="column">
+          <p>Roles: UX/UI </p>
+          <p>Timeframe: April 2022 (4 weeks) </p>
+          <p>Tools: Figma </p>
         </div>
       </div>
     </div>
-    <!-- Skills&Tools  -->
+    <!-- Why SPAR?  -->
     <div class="section">
-      <div class="container">
-        <h2>Skills&Tools</h2>
-        <ul>
-          <li>User research and usability testing </li>
-          <li>Prototyping, wireframing, user flows, mockups</li>
-          <li>Visual design</li>
-          <li>Figma, Adobe XD, Miro, HTML, Java, CSS</li>
-        </ul>
-      </div>
+
     </div>
+
+
   </main>
 
   <!-- For the footer  -->
