Add Why Spar & Process section

--- a/spar.html
+++ b/spar.html
@@ -31,7 +31,7 @@
         <h1>Project:Spar</h1>
             <picture>
               <source srcset="img/spar/spar@1.jpg" media="(max-width:767px)">
-              <img src="img/spar/spar@2.jpg" alt="Spar Preview Image">
+              <img src="img/spar/spar@2.jpg" alt="Spar Preview">
             </picture>
             <p>Spar is a money saving app that is designed for people with little
               knowledge of finance but who want to save up money in an easy and
@@ -55,10 +55,21 @@
     </div>
     <!-- Why SPAR?  -->
     <div class="section">
-
+      <div class="container">
+        <h2>Why Spar?</h2>
+        <p>For everyday people, a world of finance could be overwhelming with
+          its numbers, graphs and jargons. People need a tool that will simplify
+          their finance, making it approachable regardless of their level of
+          financial knowledge.</p>
+      </div>
     </div>
-
-
+    <!-- Process  -->
+    <div class="section">
+      <picture>
+        <source srcset="img/spar/process@1.jpg" media="(max-width:767px)">
+        <img src="img/spar/process@2.jpg" alt="Process">
+      </picture>
+    </div>
   </main>
 
   <!-- For the footer  -->
