Add User Needs section

--- a/spar.html
+++ b/spar.html
@@ -70,6 +70,20 @@
         <img src="img/spar/process@2.jpg" alt="Process">
       </picture>
     </div>
+    <!-- User Needs  -->
+    <div class="section">
+      <div class="container">
+        <h2>User Needs</h2>
+        <p>Based on an online survey result from 11 participants. I have
+          identified 3 most important features the users want.</p>
+        <picture>
+          <source srcset="img/spar/userneeds@1.jpg" media="(max-width:767px)">
+          <img src="img/spar/userneeds@2.jpg" alt="User Needs">
+        </picture>
+      </div>
+    </div>
+
+
   </main>
 
   <!-- For the footer  -->
