Add Competitors section

--- a/spar.html
+++ b/spar.html
@@ -82,6 +82,30 @@
         </picture>
       </div>
     </div>
+    <!-- Competitors  -->
+    <div class="section">
+      <div class="container">
+        <h2>Competitors</h2>
+        <p>I studied 3 popular money saving apps on how they solved different
+          usability problems related to the user needs I have previously identified.</p>
+        <div class="column">
+          <picture>
+            <source srcset="img/spar/qapital@1.png" media="(max-width:767px)">
+            <img src="img/spar/qapital@2.png" alt="Qapital Logo">
+          </picture>
+          <picture>
+            <source srcset="img/spar/acorns@1.png" media="(max-width:767px)">
+            <img src="img/spar/acorns@2.png" alt="Acorns Logo">
+          </picture>
+          <picture>
+            <source srcset="img/spar/mint@1.png" media="(max-width:767px)">
+            <img src="img/spar/mint@2.png" alt="Mint Logo">
+          </picture>
+        </div>
+      </div>
+
+    </div>
+
 
 
   </main>
