Add User Flow section

--- a/spar.html
+++ b/spar.html
@@ -103,9 +103,19 @@
           </picture>
         </div>
       </div>
-
     </div>
-
+    <!-- User Flow -->
+    <div class="section">
+      <div class="container">
+        <h2>User Flow</h2>
+        <p>Based on the competitive analysis, I created 3 user flows for
+          Dashboard, Analytics and Saving Plans.</p>
+        <picture>
+          <source srcset="img/spar/userflow@1.jpg" media="(max-width:767px)">
+          <img src="img/spar/userflow@2.jpg" alt="User Flow">
+        </picture>
+      </div>
+    </div>
 
 
   </main>
