Add Wireframe section

--- a/spar.html
+++ b/spar.html
@@ -116,7 +116,19 @@
         </picture>
       </div>
     </div>
-
+    <!-- Wireframe -->
+    <div class="section">
+      <div class="container">
+        <h2>Wireframe</h2>
+        <p>Based on the user flow, I sketched out a wireframe and developed them
+          into a medium fidelity prototype. After conducting a user testing,
+          I reiterated the prototype to the version below.</p>
+        <picture>
+          <source srcset="img/spar/wireframe@1.jpg" media="(max-width:767px)">
+          <img src="img/spar/wireframe@2.jpg" alt="Wireframe">
+        </picture>
+      </div>
+    </div>
 
   </main>
 
