--- a/spar.html
+++ b/spar.html
@@ -129,7 +129,16 @@
         </picture>
       </div>
     </div>
+    <!-- Prototype -->
+    <div class="section">
+      <div class="container">
+        <h2>Prototype</h2>
+        <p>Try Now</p>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fp8za6NKp5vrUY9ogSues0k%2FMoney-Saving-App%3Fpage-id%3D76%253A2%26node-id%3D271%253A4602%26viewport%3D-2281%252C-10481%252C0.25%26scaling%3Dscale-down%26starting-point-node-id%3D271%253A4602" allowfullscreen></iframe>
+      </div>
 
+    </div>
   </main>
 
   <!-- For the footer  -->
