Add Conclusions section

--- a/spar.html
+++ b/spar.html
@@ -137,7 +137,18 @@
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
         src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fp8za6NKp5vrUY9ogSues0k%2FMoney-Saving-App%3Fpage-id%3D76%253A2%26node-id%3D271%253A4602%26viewport%3D-2281%252C-10481%252C0.25%26scaling%3Dscale-down%26starting-point-node-id%3D271%253A4602" allowfullscreen></iframe>
       </div>
-
+    </div>
+    <!-- Conclusions -->
+    <div class="section">
+      <div class="container">
+        <h2>Conclusions</h2>
+        <p>This project allows me to showcase my skills in designing for both
+          light and dark mode. I struggled a bit when designing a user flow as
+          I’m not sure if the users prefer to fill out their incomes and expenses
+          manually or the app should link automatically to their bank account.
+          Upon conducting an online survey among friends, I concluded that linking
+          the app to users’ bank accounts is more convenient and time-saving for users. </p>
+      </div>
     </div>
   </main>
 
