--- a/spar.html
+++ b/spar.html
@@ -45,11 +45,13 @@
     </div>
     <!-- Roles&Timeframe  -->
     <div class="section">
-      <div class="row">
-        <div class="column">
-          <p>Roles: UX/UI </p>
-          <p>Timeframe: April 2022 (4 weeks) </p>
-          <p>Tools: Figma </p>
+      <div class="container">
+        <div class="row">
+          <div class="column">
+            <p>Roles: UX/UI </p>
+            <p>Timeframe: April 2022 (4 weeks) </p>
+            <p>Tools: Figma </p>
+          </div>
         </div>
       </div>
     </div>
@@ -65,10 +67,12 @@
     </div>
     <!-- Process  -->
     <div class="section">
-      <picture>
-        <source srcset="img/spar/process@1.jpg" media="(max-width:767px)">
-        <img src="img/spar/process@2.jpg" alt="Process">
-      </picture>
+      <div class="container">
+        <picture>
+          <source srcset="img/spar/process@1.jpg" media="(max-width:767px)">
+          <img src="img/spar/process@2.jpg" alt="Process">
+        </picture>
+      </div>
     </div>
     <!-- User Needs  -->
     <div class="section">
@@ -88,19 +92,19 @@
         <h2>Competitors</h2>
         <p>I studied 3 popular money saving apps on how they solved different
           usability problems related to the user needs I have previously identified.</p>
-        <div class="column">
-          <picture>
-            <source srcset="img/spar/qapital@1.png" media="(max-width:767px)">
-            <img src="img/spar/qapital@2.png" alt="Qapital Logo">
-          </picture>
-          <picture>
-            <source srcset="img/spar/acorns@1.png" media="(max-width:767px)">
-            <img src="img/spar/acorns@2.png" alt="Acorns Logo">
-          </picture>
-          <picture>
-            <source srcset="img/spar/mint@1.png" media="(max-width:767px)">
-            <img src="img/spar/mint@2.png" alt="Mint Logo">
-          </picture>
+        <div class="row">
+            <picture>
+              <source srcset="img/spar/qapital@1.png" media="(max-width:767px)">
+              <img src="img/spar/qapital@2.png" alt="Qapital Logo">
+            </picture>
+            <picture>
+              <source srcset="img/spar/acorns@1.png" media="(max-width:767px)">
+              <img src="img/spar/acorns@2.png" alt="Acorns Logo">
+            </picture>
+            <picture>
+              <source srcset="img/spar/mint@1.png" media="(max-width:767px)">
+              <img src="img/spar/mint@2.png" alt="Mint Logo">
+            </picture>
         </div>
       </div>
     </div>
