--- a/about.html
+++ b/about.html
@@ -2,7 +2,13 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Pattamon Poonsiri</title>
   <link rel="shortcut icon" href="img/favicon_io/favicon-32x32.png">
 </head>
@@ -55,7 +61,7 @@
     <!-- Skills&Tools  -->
     <div class="section">
       <div class="container">
-        <h2>Skills&Tools</h2>
+        <h1>Skills&Tools</h1>
         <ul>
           <li>User research and usability testing </li>
           <li>Prototyping, wireframing, user flows, mockups</li>
@@ -69,7 +75,7 @@
   <!-- For the footer  -->
   <footer id="contact">
     <div class="container">
-      <h2>Contact me</h2>
+      <h1>Contact me</h1>
       <p>Looking for a UX/UI designer for your team or just want to talk
         about design? Feel free to hit me up!</p>
       <div class="email">
