--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pattamon Poonsiri - UX/UI Designer</title>
     <link rel="shortcut icon" href="img/favicon_io/favicon-32x32.png">
   </head>
@@ -26,8 +32,10 @@
   <main>
     <div class="section">
       <div class="container">
-        <h1>Hello, <span>I am Pattamon</span>.</h1>
-        <p>I’m a UX/UI designer who enjoys creating delightful digital
+        <p style="font-family: 'Oswald';font-style: normal;font-weight: 500;font-size: 40px;
+line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
+        <p style="font-size: 24px;line-height: 32px;/* or 133% */letter-spacing: 0.04em;
+/* Style */color: #030303;">I’m a UX/UI designer who enjoys creating delightful digital
           experiences and bridging the gaps between branding and user
           interface.</p>
           <a href="#contact">Get in touch</a>
@@ -37,7 +45,7 @@
     <!-- For the work/projects  -->
     <div class="section work">
       <div class="container">
-        <h2>My recent works</h2>
+        <h1>My recent works</h1>
         <!-- Project 1  -->
           <div class="row">
             <div class="column">
@@ -49,7 +57,7 @@
               </picture>
             </div>
             <div class="column">
-              <h3>Spar</h3>
+              <h2>Spar</h2>
               <p>UX/UI • light&Dark mode • Figma</p>
               <p>A money saving app that is designed for people
                 with little knowledge of finance.</p>
@@ -67,7 +75,7 @@
               </picture>
             </div>
             <div class="column">
-              <h3>amusuem!</h3>
+              <h2>amusuem!</h2>
               <p>UX/UI • Figma</p>
               <p>A gallery tour app that gathers all audio tour guides and maps
               from famous museums around the world.</p>
@@ -81,7 +89,7 @@
     <!-- For the footer  -->
     <footer id="contact">
       <div class="container">
-        <h2>Contact me</h2>
+        <h1>Contact me</h1>
         <p>Looking for a UX/UI designer for your team or just want to talk
           about design? Feel free to hit me up!</p>
 
