--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
               and still trying to improve my German.</p>
             <p>If you think that I would be a great fit to your team, feel free to
               contact me via <a href="mailto:pattamon.poonsiri@gmail.com">Email</a> or <a href="https://www.linkedin.com/in/pattamon-poonsiri/" target="_blank">LinkedIn</a>.</p>
-            <a href="files/resume.pdf" target="_blank">Checkout my resume</a>
+            <a href="files/resume.pdf" target="_blank" class="button">Checkout my resume</a>
           </div>
         </div>
       </div>
@@ -79,7 +79,7 @@
       <p>Looking for a UX/UI designer for your team or just want to talk
         about design? Feel free to hit me up!</p>
       <div class="email">
-        <a href="mailto:pattamon.poonsiri@gmail.com">Email me</a>
+        <a href="mailto:pattamon.poonsiri@gmail.com" class="button email">Email me</a>
       </div>
       <div class="social">
         <!--Social Media Layout and Placeholders-->
