--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
 /* Style */color: #030303;">I’m a UX/UI designer who enjoys creating delightful digital
           experiences and bridging the gaps between branding and user
           interface.</p>
-          <a href="#contact">Get in touch</a>
+          <a href="#contact" style="font-family: 'Source Sans Pro';font-style: normal;font-weight: 400;
+          font-size: 24px;text-decoration-line: underline">Get in touch</a>
       </div>
     </div>
 
@@ -61,7 +62,7 @@ line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
               <p>UX/UI • light&Dark mode • Figma</p>
               <p>A money saving app that is designed for people
                 with little knowledge of finance.</p>
-              <a href="spar.html">View project</a>
+              <a href="spar.html" class="button">View project</a>
             </div>
           </div>
         <!-- Project 2  -->
@@ -79,7 +80,7 @@ line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
               <p>UX/UI • Figma</p>
               <p>A gallery tour app that gathers all audio tour guides and maps
               from famous museums around the world.</p>
-              <a href="#">View project</a>
+              <a href="#" class="button">View project</a>
             </div>
           </div>
         </div>
@@ -94,7 +95,7 @@ line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
           about design? Feel free to hit me up!</p>
 
           <div class="email">
-            <a href="mailto:pattamon.poonsiri@gmail.com">Email me</a>
+            <a href="mailto:pattamon.poonsiri@gmail.com" class="button email">Email me</a>
           </div>
           <div class="social">
           <!--Social Media Layout and Placeholders-->
