--- a/spar.html
+++ b/spar.html
@@ -169,7 +169,7 @@
       <p>Looking for a UX/UI designer for your team or just want to talk
         about design? Feel free to hit me up!</p>
       <div class="email">
-        <a href="mailto:pattamon.poonsiri@gmail.com">Email me</a>
+        <a href="mailto:pattamon.poonsiri@gmail.com" class="button email">Email me</a>
       </div>
       <div class="social">
         <!--Social Media Layout and Placeholders-->
