--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script src="https://kit.fontawesome.com/aa94dbc82a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,23 +31,21 @@
 
     <!-- For hero  -->
   <main>
-    <div class="section">
+    <div class="section welcome">
       <div class="container">
-        <p style="font-family: 'Oswald';font-style: normal;font-weight: 500;font-size: 40px;
-line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
-        <p style="font-size: 24px;line-height: 32px;/* or 133% */letter-spacing: 0.04em;
-/* Style */color: #030303;">I’m a UX/UI designer who enjoys creating delightful digital
+        <h1> Hello, I am Pattamon.</h1>
+        <p>I’m a UX/UI designer who enjoys creating delightful digital
           experiences and bridging the gaps between branding and user
           interface.</p>
-          <a href="#contact" style="font-family: 'Source Sans Pro';font-style: normal;font-weight: 400;
-          font-size: 24px;text-decoration-line: underline">Get in touch</a>
+          <a href="#contact"><i class="fa-solid fa-arrow-right"></i> Get in touch</a>
       </div>
     </div>
 
     <!-- For the work/projects  -->
     <div class="section work">
       <div class="container">
-        <h1>My recent works</h1>
+        <h2>My recent works</h2>
+        <hr>
         <!-- Project 1  -->
           <div class="row">
             <div class="column">
@@ -57,9 +56,9 @@ line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
                 alt="SPAR Preview">
               </picture>
             </div>
-            <div class="column">
-              <h2>Spar</h2>
-              <p>UX/UI • light&Dark mode • Figma</p>
+            <div class="column spar">
+              <h3>Spar</h3>
+              <p><span>UX/UI • light&Dark mode • Figma</span></p>
               <p>A money saving app that is designed for people
                 with little knowledge of finance.</p>
               <a href="spar.html" class="button">View project</a>
@@ -75,9 +74,9 @@ line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
               alt="amuseum Preview">
               </picture>
             </div>
-            <div class="column">
-              <h2>amusuem!</h2>
-              <p>UX/UI • Figma</p>
+            <div class="column amuseum">
+              <h3>amusuem!</h3>
+              <p><span>UX/UI • Figma</span></p>
               <p>A gallery tour app that gathers all audio tour guides and maps
               from famous museums around the world.</p>
               <a href="#" class="button">View project</a>
@@ -90,7 +89,8 @@ line-height: 59px;">Hello, <span>I am Pattamon</span>.</p>
     <!-- For the footer  -->
     <footer id="contact">
       <div class="container">
-        <h1>Contact me</h1>
+        <h2>Contact me</h2>
+        <hr>
         <p>Looking for a UX/UI designer for your team or just want to talk
           about design? Feel free to hit me up!</p>
 
