--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <script src="https://kit.fontawesome.com/aa94dbc82a.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,9 +46,9 @@
           <div class="column">
             <p>Hi, my name is Pattamon Poonsiri. I’m always passionate about arts and design,
               but I only recently fell in love with UX/UI.</p>
-            <p>I strongly believe that good storytelling and design are keys to successful products.
-              I approach this by tacking problems creatively and with empathy. I also strive to work with people
-              from different cultures and backgrounds as I believe diverse team produces the best results.</p>
+            <p><b>I strongly believe that good storytelling and design are keys to successful products.</b>
+              I approach this by tacking problems creatively and with empathy. <b>I also strive to work with people
+              from different cultures and backgrounds</b> as I believe diverse team produces the best results.</p>
             <p>Outside the work, I find my inspiration through cooking, visiting museums,
               and traveling around the world. I can speak fluent Thai and English,
               and still trying to improve my German.</p>
@@ -61,7 +62,7 @@
     <!-- Skills&Tools  -->
     <div class="section">
       <div class="container">
-        <h1>Skills&Tools</h1>
+        <h2>Skills&Tools</h2>
         <ul>
           <li>User research and usability testing </li>
           <li>Prototyping, wireframing, user flows, mockups</li>
@@ -75,7 +76,7 @@
   <!-- For the footer  -->
   <footer id="contact">
     <div class="container">
-      <h1>Contact me</h1>
+      <h2>Contact me</h2>
       <p>Looking for a UX/UI designer for your team or just want to talk
         about design? Feel free to hit me up!</p>
       <div class="email">
