--- a/spar.html
+++ b/spar.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <script src="https://kit.fontawesome.com/aa94dbc82a.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,21 +31,22 @@
     </div>
   </header>
 
-  <main>
+  <main class='project'>
     <!-- Intro  -->
     <div class="section">
       <div class="container">
         <h1>Project:Spar</h1>
+        <hr>
             <picture>
               <source srcset="img/spar/spar@1.jpg" media="(max-width:767px)">
               <img src="img/spar/spar@2.jpg" alt="Spar Preview">
             </picture>
-            <p>Spar is a money saving app that is designed for people with little
-              knowledge of finance but who want to save up money in an easy and
+            <p>Spar is a money saving app that is <b>designed for people with little
+              knowledge of finance</b> but who want to save up money in an easy and
               time saving manner. </p>
-            <p>The app will function like their personal financial advisor who
+            <p><b>The app will function like their personal financial advisor</b> who
               keeping tracks of their expenses and provide a budget planner accordingly.
-              Users will be able to plan their finance in advance whether to buy a gift,
+              <b>Users will be able to plan their finance in advance</b> whether to buy a gift,
               go on a trip or buy a house. By simply selecting a saving plan, they can
               control their spending and save more.</p>
       </div>
@@ -54,9 +56,9 @@
       <div class="container">
         <div class="row">
           <div class="column">
-            <p>Roles: UX/UI </p>
-            <p>Timeframe: April 2022 (4 weeks) </p>
-            <p>Tools: Figma </p>
+            <p><b>Roles:</b> UX/UI </p>
+            <p><b>Timeframe:</b> April 2022 (4 weeks) </p>
+            <p><b>Tools:</b> Figma</p>
           </div>
         </div>
       </div>
@@ -165,7 +167,8 @@
   <!-- For the footer  -->
   <footer id="contact">
     <div class="container">
-      <h1>Contact me</h1>
+      <h2>Contact me</h2>
+      <hr>
       <p>Looking for a UX/UI designer for your team or just want to talk
         about design? Feel free to hit me up!</p>
       <div class="email">
