--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- For header  -->
     <header>
         <div class="container">
-            <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+            <a href="index.html"><img src="img/logo.svg" alt="logo" class="logo"></a>
           <nav>
             <ul>
               <li><a href="index.html">Work</a></li>
@@ -29,7 +29,7 @@
     </header>
 
     <!-- For hero  -->
-  <main>
+  <main id="hero">
     <div class="section welcome">
       <div class="container">
         <h1> Hello, I am Pattamon.</h1>
