Update layout styling and media queries

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="img/favicon_io/favicon-32x32.png">
 </head>
 
-<body>
+<body class="about">
 
   <!-- For header  -->
   <header>
@@ -36,6 +36,7 @@
     <div class="section">
       <div class="container">
         <h1>About me</h1>
+        <hr>
         <div class="row">
           <div class="column">
             <picture>
@@ -60,9 +61,10 @@
       </div>
     </div>
     <!-- Skills&Tools  -->
-    <div class="section">
+    <div class="section skills">
       <div class="container">
         <h2>Skills&Tools</h2>
+        <hr>
         <ul>
           <li>User research and usability testing </li>
           <li>Prototyping, wireframing, user flows, mockups</li>
@@ -77,6 +79,7 @@
   <footer id="contact">
     <div class="container">
       <h2>Contact me</h2>
+      <hr>
       <p>Looking for a UX/UI designer for your team or just want to talk
         about design? Feel free to hit me up!</p>
       <div class="email">
