--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Pattamon Poonsiri - UX/UI Designer</title>
     <link rel="shortcut icon" href="img/favicon_io/favicon-32x32.png">
   </head>
-  <body>
+  <body class="home">
 
     <!-- For header  -->
     <header>
@@ -29,7 +29,7 @@
     </header>
 
     <!-- For hero  -->
-  <main id="hero">
+  <main>
     <div class="section welcome">
       <div class="container">
         <h1> Hello, I am Pattamon.</h1>
