--- a/spar.html
+++ b/spar.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="img/favicon_io/favicon-32x32.png">
 </head>
 
-<body>
+<body class="project">
 
   <!-- For header  -->
   <header>
@@ -31,9 +31,9 @@
     </div>
   </header>
 
-  <main class='project'>
+  <main>
     <!-- Intro  -->
-    <div class="section">
+    <div class="section intro">
       <div class="container">
         <h1>Project:Spar</h1>
         <hr>
@@ -100,7 +100,7 @@
         <h2>Competitors</h2>
         <p>I studied 3 popular money saving apps on how they solved different
           usability problems related to the user needs I have previously identified.</p>
-        <div class="row">
+        <div class="row competitors">
             <picture>
               <source srcset="img/spar/qapital@1.png" media="(max-width:767px)">
               <img src="img/spar/qapital@2.png" alt="Qapital Logo">
