Update Column Styling

--- a/about.html
+++ b/about.html
@@ -38,13 +38,13 @@
         <h1>About me</h1>
         <hr>
         <div class="row">
-          <div class="column">
+          <div class="column col-md-6 col-lg-7">
             <picture>
               <source srcset="img/profile@1.jpg" media="(max-width:767px)">
               <img src="img/profile@2.jpg" alt="Profile Photo">
             </picture>
           </div>
-          <div class="column">
+          <div class="column col-md-6 col-lg-5">
             <p>Hi, my name is Pattamon Poonsiri. I’m always passionate about arts and design,
               but I only recently fell in love with UX/UI.</p>
             <p><b>I strongly believe that good storytelling and design are keys to successful products.</b>
