--- a/spar.html
+++ b/spar.html
@@ -37,6 +37,7 @@
       <div class="container">
         <h1>Project:Spar</h1>
         <hr>
+          <div class="row">
             <picture>
               <source srcset="img/spar/spar@1.jpg" media="(max-width:767px)">
               <img src="img/spar/spar@2.jpg" alt="Spar Preview">
@@ -49,6 +50,7 @@
               <b>Users will be able to plan their finance in advance</b> whether to buy a gift,
               go on a trip or buy a house. By simply selecting a saving plan, they can
               control their spending and save more.</p>
+          </div>
       </div>
     </div>
     <!-- Roles&Timeframe  -->
