--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="container">
         <h1> Hello, I am Pattamon.</h1>
         <p>I’m a UX/UI designer who enjoys creating delightful digital
-          experiences and bridging the gaps between branding and user
-          interface.</p>
+          experiences <span>and bridging the gaps between branding and user
+          interface.</span></p>
           <br>
           <a href="#contact"><i class="fa-solid fa-arrow-right"></i> Get in touch</a>
       </div>
@@ -48,7 +48,7 @@
         <hr>
         <!-- Project 1  -->
           <div class="row">
-            <div class="column">
+            <div class="column col-md-6 col-lg-7">
               <picture>
                 <source srcset="img/spar/spar@1.jpg"
                 media="(max-width:767px)">
@@ -56,7 +56,7 @@
                 alt="SPAR Preview">
               </picture>
             </div>
-            <div class="column spar">
+            <div class="column col-md-6 col-lg-5 spar">
               <h3>Spar</h3>
               <p><span>UX/UI • light&Dark mode • Figma</span></p>
               <p>A money saving app that is designed for people
@@ -66,7 +66,7 @@
           </div>
         <!-- Project 2  -->
           <div class="row">
-            <div class="column">
+            <div class="column col-md-6 col-lg-7">
               <picture>
               <source srcset="img/amuseum/amuseum@1.jpg"
               media="(max-width:767px)">
@@ -74,7 +74,7 @@
               alt="amuseum Preview">
               </picture>
             </div>
-            <div class="column amuseum">
+            <div class="column col-md-6 col-lg-5 amuseum">
               <h3>amusuem!</h3>
               <p><span>UX/UI • Figma</span></p>
               <p>A gallery tour app that gathers all audio tour guides and maps
