Update responsive styling & animation

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <!-- For header  -->
   <header>
     <div class="container">
-      <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+      <a href="index.html"><img src="img/logo.svg" alt="logo" class="logo"></a>
 
       <nav>
         <ul>
@@ -33,18 +33,18 @@
 
   <main>
     <!-- About me  -->
-    <div class="section">
+    <div class="section introduction">
       <div class="container">
         <h1>About me</h1>
         <hr>
         <div class="row">
-          <div class="column col-md-6 col-lg-7">
+          <div class="column col-md-6 col-lg-7 col-xl-8">
             <picture>
               <source srcset="img/profile@1.jpg" media="(max-width:767px)">
               <img src="img/profile@2.jpg" alt="Profile Photo">
             </picture>
           </div>
-          <div class="column col-md-6 col-lg-5">
+          <div class="column col-md-6 col-lg-5 col-xl-4">
             <p>Hi, my name is Pattamon Poonsiri. I’m always passionate about arts and design,
               but I only recently fell in love with UX/UI.</p>
             <p><b>I strongly believe that good storytelling and design are keys to successful products.</b>
