--- a/spar.html
+++ b/spar.html
@@ -19,7 +19,7 @@
   <!-- For header  -->
   <header>
     <div class="container">
-      <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+      <a href="index.html"><img src="img/logo.svg" alt="logo" class="logo"></a>
 
       <nav>
         <ul>
@@ -57,7 +57,6 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class="column">
             <p><b>Roles:</b> UX/UI </p>
             <p><b>Timeframe:</b> April 2022 (4 weeks) </p>
             <p><b>Tools:</b> Figma</p>
