--- a/spar.html
+++ b/spar.html
@@ -37,32 +37,33 @@
       <div class="container">
         <h1>Project:Spar</h1>
         <hr>
-          <div class="row">
-            <picture>
-              <source srcset="img/spar/spar@1.jpg" media="(max-width:767px)">
-              <img src="img/spar/spar@2.jpg" alt="Spar Preview">
-            </picture>
-            <p>Spar is a money saving app that is <b>designed for people with little
+        <div class="row">
+          <picture>
+            <source srcset="img/spar/spar@1.jpg" media="(max-width:767px)">
+            <img src="img/spar/spar@2.jpg" alt="Spar Preview">
+          </picture>
+          <p>Spar is a money saving app that is <b>designed for people with little
               knowledge of finance</b> but who want to save up money in an easy and
-              time saving manner. </p>
-            <p><b>The app will function like their personal financial advisor</b> who
-              keeping tracks of their expenses and provide a budget planner accordingly.
-              <b>Users will be able to plan their finance in advance</b> whether to buy a gift,
-              go on a trip or buy a house. By simply selecting a saving plan, they can
-              control their spending and save more.</p>
-          </div>
+            time saving manner. </p>
+          <p><b>The app will function like their personal financial advisor</b> who
+            keeping tracks of their expenses and provide a budget planner accordingly.
+            <b>Users will be able to plan their finance in advance</b> whether to buy a gift,
+            go on a trip or buy a house. By simply selecting a saving plan, they can
+            control their spending and save more.
+          </p>
+        </div>
       </div>
     </div>
     <!-- Roles&Timeframe  -->
     <div class="section">
       <div class="container">
         <div class="row">
-            <p><b>Roles:</b> UX/UI </p>
-            <p><b>Timeframe:</b> April 2022 (4 weeks) </p>
-            <p><b>Tools:</b> Figma</p>
-          </div>
+          <p><b>Roles:</b> UX/UI </p>
+          <p><b>Timeframe:</b> April 2022 (4 weeks) </p>
+          <p><b>Tools:</b> Figma</p>
         </div>
       </div>
+    </div>
     </div>
     <!-- Why SPAR?  -->
     <div class="section">
@@ -102,18 +103,18 @@
         <p>I studied 3 popular money saving apps on how they solved different
           usability problems related to the user needs I have previously identified.</p>
         <div class="row competitors">
-            <picture>
-              <source srcset="img/spar/qapital@1.png" media="(max-width:767px)">
-              <img src="img/spar/qapital@2.png" alt="Qapital Logo">
-            </picture>
-            <picture>
-              <source srcset="img/spar/acorns@1.png" media="(max-width:767px)">
-              <img src="img/spar/acorns@2.png" alt="Acorns Logo">
-            </picture>
-            <picture>
-              <source srcset="img/spar/mint@1.png" media="(max-width:767px)">
-              <img src="img/spar/mint@2.png" alt="Mint Logo">
-            </picture>
+          <picture>
+            <source srcset="img/spar/qapital@1.png" media="(max-width:767px)">
+            <img src="img/spar/qapital@2.png" alt="Qapital Logo">
+          </picture>
+          <picture>
+            <source srcset="img/spar/acorns@1.png" media="(max-width:767px)">
+            <img src="img/spar/acorns@2.png" alt="Acorns Logo">
+          </picture>
+          <picture>
+            <source srcset="img/spar/mint@1.png" media="(max-width:767px)">
+            <img src="img/spar/mint@2.png" alt="Mint Logo">
+          </picture>
         </div>
       </div>
     </div>
@@ -148,7 +149,8 @@
         <h2>Prototype</h2>
         <p>Try Now</p>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fp8za6NKp5vrUY9ogSues0k%2FMoney-Saving-App%3Fpage-id%3D76%253A2%26node-id%3D271%253A4602%26viewport%3D-2281%252C-10481%252C0.25%26scaling%3Dscale-down%26starting-point-node-id%3D271%253A4602" allowfullscreen></iframe>
+          src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fp8za6NKp5vrUY9ogSues0k%2FMoney-Saving-App%3Fpage-id%3D76%253A2%26node-id%3D271%253A4602%26viewport%3D-2281%252C-10481%252C0.25%26scaling%3Dscale-down%26starting-point-node-id%3D271%253A4602"
+          allowfullscreen></iframe>
       </div>
     </div>
     <!-- Conclusions -->
