--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
