Update according to user feedbacks
- Fix misspelling
- Delete active underline in toggle menu
- Set toggle menu to max 640 width
- Resize prototype
- Fix competitor images to center align

--- a/spar.html
+++ b/spar.html
@@ -104,7 +104,7 @@
         <h2>Competitors</h2>
         <p>I studied 3 popular money saving apps on how they solved different
           usability problems related to the user needs I have previously identified.</p>
-        <div class="row competitors">
+        <div class="competitors">
           <picture>
             <source srcset="img/spar/qapital@1.png" media="(max-width:767px)">
             <img src="img/spar/qapital@2.png" alt="Qapital Logo">
@@ -150,7 +150,7 @@
       <div class="container">
         <h2>Prototype</h2>
         <p>Try Now</p>
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="550"
           src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fp8za6NKp5vrUY9ogSues0k%2FMoney-Saving-App%3Fpage-id%3D76%253A2%26node-id%3D271%253A4602%26viewport%3D-2281%252C-10481%252C0.25%26scaling%3Dscale-down%26starting-point-node-id%3D271%253A4602"
           allowfullscreen></iframe>
       </div>
