--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <p>Hi, my name is Pattamon Poonsiri. I’m always passionate about arts and design,
               but I only recently fell in love with UX/UI.</p>
             <p><b>I strongly believe that good storytelling and design are keys to successful products.</b>
-              I approach this by tacking problems creatively and with empathy. <b>I also strive to work with people
+              I approach this by tackling problems creatively and with empathy. <b>I also strive to work with people
                 from different cultures and backgrounds</b> as I believe diverse team produces the best results.</p>
             <p>Outside the work, I find my inspiration through cooking, visiting museums,
               and traveling around the world. I can speak fluent Thai and English,
